# MedStock

./: .gitignore  README.md
Code/API/API_MEDSTOCK/: .env  database.py  main.py  send_email.py
Code/APP/: .env  main.py  pyproject.toml
Code/APP/Pages/: __init__.py
Code/APP/Pages/Login/: config_login.py  ui_login.py
Code/APP/Pages/Windows/: WindowsControl.py
Code/BD/Crude/: MedStock.sql
Code/BD/Function/: Is_Alive.sql  get_item_details.sql  get_requerimentos_by_user.sql  get_roles.sql  get_user_by_email.sql  inserir_gestor_responsavel.sql
Code/BD/Inserts/: Consumivel.sql  Item.sql  Medicamentos.sql  Roles.sql  Status_Requerimento.sql  Stock.sql  Tipo_Item.sql  Tipo_Medicamento.sql  User_Admin.sql
Code/MEDOCORRENCIAS/MedOcorrencias/: .env
Code/MEDREADER/: settings.gradle.kts
Code/MEDREADER/app/: build.gradle.kts
Code/MEDREADER/gradle/: libs.versions.toml
Code/MEDSTOCK/: .env  CreateExe.txt  app_modules.py  files.qrc  files_rc.py  main.py  requirements.txt
Documentos/Diagramas/: MedStock.vpp
Documents/Diagrams/: MedStock.vpp  MedStock.vpp.bak_000f  MedStock.vpp.bak_001d  MedStock.vpp.bak_002d  MedStock.vpp.bak_003d  MedStock.vpp.bak_004d  MedStock.vpp.bak_005d  MedStock.vpp.bak_006d  MedStock.vpp.bak_007d
Documents/Relatorio/: Report_BrunoOliveira_n15566_AnaPinto_n23548_DiogoPinheiro_n24016_DiogoFernandes_n24017.docx
Documents/Report/: Eng_Software_BrunoOliveira_n15566_AnaPinto_n23548_DiogoPinheiro_n24016_DiogoFernandes_n24017.docx  Report_BrunoOliveira_n15566_AnaPinto_n23548_DiogoPinheiro_n24016_DiogoFernandes_n24017.docx
(+262 files in other folders)
