[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MedStock"
version = "0.1.0"
description = "Gestão de estoque de medicamentos"
authors = [""]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "flet>=0.24.1"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
